--- a/SEM-2/AJP/Practical 6/servlet_withoutDB/servlet_withoutDB/src/main/webapp/WEB-INF/web.xml
+++ b/SEM-2/AJP/Practical 6/servlet_withoutDB/servlet_withoutDB/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,18 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+    <servlet-name>RegisterServlet</servlet-name>
+    <servlet-class>com.example.RegisterServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>RegisterServlet</servlet-name>
+    <url-pattern>/register</url-pattern>
+  </servlet-mapping>
+
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+
 </web-app>
