--- a/SEM-2/AJP/Practical 7/servlet_withDB/servlet_withDB/pom.xml
+++ b/SEM-2/AJP/Practical 7/servlet_withDB/servlet_withDB/pom.xml
@@ -26,6 +26,12 @@
       <version>8.0.33</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.12.1</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>servlet_withDB</finalName>
