--- a/SEM-2/MP/Practical 9-10/capstoneproject/pubspec.yaml
+++ b/SEM-2/MP/Practical 9-10/capstoneproject/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   flutter_webrtc: ^0.13.1+hotfix.1
   socket_io_client: ^3.1.1
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -66,8 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
