--- a/SEM-2/MP/Practical 9-10/capstoneproject/pubspec.yaml
+++ b/SEM-2/MP/Practical 9-10/capstoneproject/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_webrtc: ^0.13.1+hotfix.1
   socket_io_client: ^3.1.1
   lottie: ^3.3.1
+  table_calendar: ^3.0.9
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
