--- a/SEM-2/MP/Practical 9-10/capstoneproject/pubspec.yaml
+++ b/SEM-2/MP/Practical 9-10/capstoneproject/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   lottie: ^3.3.1
   table_calendar: ^3.0.9
   intl: ^0.19.0
+  timeago: ^3.7.0
 
 dev_dependencies:
   flutter_test:
