--- a/SEM-2/DAA/ISE/movie_ticket_booking_backend/.env
+++ b/SEM-2/DAA/ISE/movie_ticket_booking_backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/movieticket
+MONGO_URI=mongodb+srv://angreatharva:G8aj02ahRgJewNcG@cluster0.ip7zxo3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NGROK_TOKEN=2uWMPR2ClKML19SJfzwqvD19qM3_3WNvuhAroNbbMgBFqJ636
