--- a/SEM-2/MP/Practical 9-10/capstoneproject/pubspec.yaml
+++ b/SEM-2/MP/Practical 9-10/capstoneproject/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   table_calendar: ^3.0.9
   intl: ^0.19.0
   timeago: ^3.7.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
