--- a/SEM-2/MP/Practical 9-10/capstoneproject/pubspec.yaml
+++ b/SEM-2/MP/Practical 9-10/capstoneproject/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl: ^0.19.0
   timeago: ^3.7.0
   shared_preferences: ^2.5.3
+  flutter_native_splash: ^2.4.6
 
 dev_dependencies:
   flutter_test:
