--- a/SEM-2/MP/Practical 9-10/capstoneprojectserver/package.json
+++ b/SEM-2/MP/Practical 9-10/capstoneprojectserver/package.json
@@ -4,7 +4,9 @@
   "description": "WebRTC Signalling Server",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "test": "jest --detectOpenHandles",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "webrtc",
@@ -18,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.13.2",
@@ -26,6 +29,9 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.9",
-    "socket.io": "^4.6.0"
+    "socket.io": "^4.6.0",
+    "supertest": "^7.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
